--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,2 +1,21 @@
 .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px;
+}
+
+.header-title {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  align-items: center;
+}
+
+.header-title > p {
+  font-weight: bold;
+  font-size: larger;
+}
+
+.header-container {
 }
