--- a/src/css/header.css
+++ b/src/css/header.css
@@ -18,4 +18,11 @@
 }
 
 .header-container {
+  display: flex;
+}
+
+.header-container > Input {
+  width: fit-content;
+  min-width: 500px;
+  margin-right: 5px;
 }
