--- a/src/css/header.css
+++ b/src/css/header.css
@@ -3,6 +3,12 @@
   justify-content: space-between;
   align-items: center;
   margin: 20px;
+
+  @media only screen and (max-width: 800px) {
+    display: grid;
+    justify-items: center;
+    justify-content: center;
+  }
 }
 
 .header-title {
@@ -10,6 +16,10 @@
   flex-wrap: nowrap;
   flex-direction: row;
   align-items: center;
+
+  @media only screen and (max-width: 800px) {
+    margin-bottom: 10px;
+  }
 }
 
 .header-title > p {
@@ -19,10 +29,33 @@
 
 .header-container {
   display: flex;
+
+  @media only screen and (max-width: 800px) {
+    display: grid;
+    justify-items: center;
+  }
+}
+
+.header-min-container {
+  @media only screen and (max-width: 800px) {
+    margin-top: 10px;
+  }
 }
 
 .header-container > Input {
   width: fit-content;
   min-width: 500px;
   margin-right: 5px;
+
+  @media only screen and (max-width: 800px) {
+    min-width: 500px;
+
+    @media only screen and (max-width: 520px) {
+      min-width: 350px;
+
+      @media only screen and (max-width: 370px) {
+        min-width: auto;
+      }
+    }
+  }
 }
