--- a/src/css/index.css
+++ b/src/css/index.css
@@ -82,12 +82,16 @@
   }
 
   .site-wrapper {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+    @media only screen and (min-width: 800px) {
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
   }
 
   .todo-list {
-    flex: 1;
+    @media only screen and (min-width: 800px) {
+      flex: 1;
+    }
   }
 }
