Bugfix index.css

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -78,7 +78,7 @@
     --check-button-foreground: #86efac;
     --check-button-background: #404040;
     --check-completed: #a3a3a3;
-    --delete: #ef4444;
+    --delete: #f87171;
   }
 }
 
