--- a/src/css/header.css
+++ b/src/css/header.css
@@ -15,7 +15,7 @@
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
-  align-items: center;
+  align-items: stretch;
 
   @media only screen and (max-width: 800px) {
     margin-bottom: 10px;
@@ -24,7 +24,6 @@
 
 .header-title > p {
   font-weight: bold;
-  font-size: larger;
 }
 
 .header-container {
