--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,6 @@
 @import url("header.css");
 @import url("footer.css");
-@import url("todos.css");
+@import url("tasks.css");
 
 @tailwind base;
 @tailwind components;
@@ -86,6 +86,7 @@
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
     font-family: "JosefinSans", sans-serif;
